demoargo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demoargo
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
